# master-worker-evolab-llm

./: .gitignore  README.md  config.yaml  main.py  output_code.py  pyproject.toml
agents/: genome_generator.py  integration_verifier.py  master.py  orchestrator.py  unit_verifier.py  worker.py
master/: master.py
models/: individual.py  orchestrator.py  problem.py  subtasks.py  verifiers.py
slm/: __init__.py  chatgroq.py  ollama.py  openrouter.py  slm.py
system_prompts/: genome_prompt.py  master_prompt.py  orchestrator_prompt.py  worker_prompt.py
system_prompts/verifiers/: integrate.py  integrate.txt  unit.py  unit.txt
utils/: json_to_model.py  load_config.py  logging.py
workflow/: __init__.py  batch.py  engine.py  state.py  worker_executor.py
