[project]
name = "master-server-slm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "instructor>=1.14.5",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "openai>=2.24.0",
    "python-toon>=0.1.3",
    "pyyaml>=6.0.3",
]
